--- a/package.json
+++ b/package.json
@@ -7,5 +7,16 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "zwonlala",
-  "license": "ISC"
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/zwonlala/miriPerformanceChecker.git"
+  },
+  "bugs": {
+    "url": "https://github.com/zwonlala/miriPerformanceChecker/issues"
+  },
+  "homepage": "https://github.com/zwonlala/miriPerformanceChecker#readme",
+  "devDependencies": {
+    "lighthouse": "^10.1.1"
+  }
 }
