--- a/.gitignore
+++ b/.gitignore
@@ -174,4 +174,7 @@ dist
 # SvelteKit build / generate output
 .svelte-kit
 
+
+# all Files in "./report" file directory is ignored
+report/*
 # End of https://www.toptal.com/developers/gitignore/api/macos,node
